recherche a partir du nom de l enfant et du numero de l acte
