# src/routes/searchBirth.routes.js
@@ -3,6 +3,6 @@ import { searchBirth } from "../controllers/searchBirth.controllers.js";
 
 const router = Router();
 
-router.post("/births/search/:actNumber", searchBirth);
+router.post("/births/search", searchBirth);
 //
 export default router;
